fix mobile spacing

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -23,6 +23,7 @@ body {
     background-color: white;
     font-size: 1.25rem;
     color: var(--text-gray);
+    background-color: var(--primary-black);
 }
 
 main {
