--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -1,12 +1,10 @@
 footer {
     position: relative;
 background-color: white;
-
+background-color: var(--primary-black);
+padding-bottom: 2rem;
 }
 
-footer .inner-container {
-    background-color: var(--primary-black);
-}
 
 footer p {
     margin: .5rem 0 1rem 0;
@@ -45,7 +43,6 @@ footer .chat-now {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 1rem;
 }
 
 /* footer grid */
