--- a/css/_responsive-section.scss
+++ b/css/_responsive-section.scss
@@ -1,5 +1,5 @@
 .responsive-by-design {
-    margin-bottom: 9rem;
+    margin-bottom: 10rem;
 }
 
 .responsive {
